# open-rtf-converter

./: .gitignore  Cargo.toml  README.md
docs/: project_plan.md  web-safe-rust.md
fixtures/: object-result.rtf  png-alpha.rtf  png-trns.rtf  simple.rtf  table-ish.rtf  weird.rtf
fixtures/reference/: expected-policy.json
fuzz/: Cargo.toml  README.md
fuzz/corpus/rtf_lexer/: malformed-boundaries.rtf  oversized-control.rtf  simple.rtf
fuzz/corpus/rtf_parser/: bin-boundary.rtf  deep-groups.rtf  malformed-hex-and-bin.rtf  object-result.rtf  unknown-object-data.rtf
fuzz/corpus/rtf_to_pdf_passive/: external-and-object-fields.rtf  field-object.rtf  listname-metadata-smuggling.rtf  metadata-object-smuggling.rtf  shape-picture-pib-object-result.rtf
fuzz/fuzz_targets/: rtf_lexer.rs  rtf_parser.rs  rtf_to_pdf_passive.rs
src/: config.rs  convert.rs  diagnostics.rs  fonts.rs  layout.rs  lib.rs  main.rs  model.rs  pdf.rs
src/rtf/: lexer.rs  mod.rs  parser.rs
tests/: conversion.rs  fuzz_regression.rs  reference_fixtures.rs  security.rs
