[package]
name = "open-rtf-converter"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
], optional = true }
pdf-writer = { version = "0.15.0", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
ttf-parser = { version = "0.25.1", default-features = false, features = ["no-std-float"] }
unicode-linebreak = { version = "0.1.5", default-features = false }

[dev-dependencies]
lopdf = "0.38.0"
tempfile = "3.24.0"

[[bin]]
name = "open-rtf-converter"
path = "src/main.rs"
required-features = ["cli"]
